# j2k

./: .gitattributes  .gitignore  .jscpd-tests.json  .jscpd.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  NOTICES.md  README.md  REDUCTION_AUDIT.md  SECURITY.md  codecov.yml  deny.toml  reduction-audit-findings.json  release-crates.json  rust-toolchain.toml  typos.toml
crates/j2k/: Cargo.toml  README.md
crates/j2k-cli/: Cargo.toml  README.md
crates/j2k-cli/src/: main.rs
crates/j2k-cli/tests/: inspect_cli.rs
crates/j2k-codec-math/: Cargo.toml  README.md  build.rs
crates/j2k-codec-math/src/: classic.rs  dwt.rs  jpeg.rs  lib.rs  mct.rs
crates/j2k-codec-math/tests/: generated_freshness.rs
crates/j2k-compare/: Cargo.toml  build.rs
crates/j2k-compare/src/: common.rs  encode_compare.rs  fixture_compare.rs  grok.rs  grok_shim.c  lib.rs  openjpeg.rs
crates/j2k-compare/tests/: bench_harness.rs  cli_usage.rs  in_process_parity.rs
crates/j2k-core/: Cargo.toml  README.md
crates/j2k-core/src/: accelerator.rs  backend.rs  batch.rs  buffer.rs  context.rs  device.rs  error.rs  host_allocation.rs  lib.rs  passthrough.rs  pixel.rs  row_sink.rs  sample.rs  scale.rs  scratch.rs  traits.rs  types.rs
crates/j2k-core/tests/: api.rs
crates/j2k-cuda/: Cargo.toml  README.md
crates/j2k-cuda-runtime/: Cargo.toml  README.md  build.rs
crates/j2k-cuda-runtime/docs/: cuda-oxide-copy-u8-pr-notes.md
crates/j2k-cuda-runtime/src/: allocation.rs  build_flags.rs  bytes.rs  classic_decode.rs  context.rs  cuda_oxide_simt_prelude.rs  driver.rs  error.rs  execution.rs  htj2k_decode.rs  htj2k_decode_kernels.cu  htj2k_decode_kernels.ptx  htj2k_encode.rs  htj2k_encode_kernels.cu  htj2k_encode_kernels.ptx  htj2k_packetize.rs  j2k_decode.rs  j2k_encode.rs  j2k_encode_kernels.cu  j2k_encode_kernels.ptx  jpeg.rs  jpeg_decode_kernels.cu  kernels.rs  lib.rs  memory.rs  ml.rs  tests.rs  transcode.rs  transcode_kernels.cu
crates/j2k-cuda/benches/: encode_stages.rs  htj2k_decode.rs  htj2k_encode.rs
crates/j2k-cuda/examples/: htj2k_decode_profile.rs
crates/j2k-cuda/src/: allocation.rs  batch.rs  codec.rs  decoder.rs  direct_plan.rs  encode.rs  error.rs  htj2k_plan_tests.rs  lib.rs  profile.rs  runtime.rs  session.rs  surface.rs
crates/j2k-cuda/tests/: batch_decoder_api.rs  bench_harness.rs  classic_tier1_parity.rs  encode_stage_api.rs  host_surface.rs  htj2k_cuda_kernels.rs  htj2k_encode_parity.rs  htj2k_plan.rs
crates/j2k-jpeg/: Cargo.toml  README.md  build.rs
crates/j2k-jpeg-cuda/: Cargo.toml  README.md
crates/j2k-jpeg-cuda/benches/: device_decode.rs
crates/j2k-jpeg-cuda/src/: allocation.rs  batch.rs  codec.rs  decoder.rs  encode.rs  error.rs  lib.rs  owned_decode.rs  profile.rs  runtime.rs  session.rs  surface.rs
crates/j2k-jpeg-cuda/tests/: encode.rs  host_surface.rs
crates/j2k-jpeg-metal/: Cargo.toml  README.md
crates/j2k-jpeg-metal/benches/: compare.rs  device_upload.rs  encode_baseline.rs
crates/j2k-jpeg-metal/docs/: routing-benchmarks.md
crates/j2k-jpeg-metal/src/: abi.rs  batch.rs  batch_allocation.rs  buffers.rs  codec_batch.rs  compute.rs  decode_request.rs  decoder.rs  encode.rs  error.rs  fast_packets.rs  lib.rs  plan_owner_ledger.rs  resident_batch.rs  routing.rs  session.rs  shaders.metal  shaders_decode_fast420.metal  shaders_decode_fast422_regions.metal  shaders_decode_fast444.metal  shaders_decode_helpers.metal  shaders_encode.metal  shaders_pack_444.metal  shaders_pack_subsampled.metal  shaders_shared.metal  surface.rs  tests.rs  tile_batch.rs  viewport.rs  viewport_tests.rs
crates/j2k-jpeg-metal/tests/: batch.rs  core_traits.rs  encode.rs  shader_integrity.rs  viewport.rs
crates/j2k-jpeg/benches/: compare.rs  corpus_report.rs  encode_cpu.rs  fast420_breakdown.rs  micro.rs
crates/j2k-jpeg/examples/: decode_region.rs  dump_bmp.rs  inspect.rs
crates/j2k-jpeg/fuzz/: Cargo.toml
crates/j2k-jpeg/src/: allocation.rs  baseline_encode_contract.rs  baseline_entropy.rs  batch_session.rs  bench_support.rs  capabilities.rs  context.rs  dct_contract.rs  decoder.rs  decoder_tests.rs  encoded_output.rs  encoder.rs  error.rs  info.rs  lib.rs  output_buffer.rs  profile.rs  segment.rs  transcode.rs
crates/j2k-jpeg/tests/: baseline_encode_helpers.rs  batch.rs  build_script.rs  capabilities_cuda.rs  component_rows.rs  conversions.rs  core_traits.rs  dct_reemit_contract.rs  dct_reemit_parity.rs  decode_into.rs  device_plan.rs  encode_baseline.rs  external_wsi.rs  fast420_profile.rs  fast_packet.rs  idct_parity.rs  inspect.rs  libjpeg_turbo_compare.rs  (+9 more)
crates/j2k-metal/: Cargo.toml  README.md  build.rs
crates/j2k-metal-support/: Cargo.toml  README.md
crates/j2k-ml/: Cargo.toml  README.md
crates/j2k-native/: Cargo.toml  README.md
crates/j2k-profile/: Cargo.toml  README.md
crates/j2k-test-support/: Cargo.toml
crates/j2k-tilecodec/: Cargo.toml  README.md
crates/j2k-transcode/: Cargo.toml  README.md
crates/j2k-transcode-cuda/: Cargo.toml  README.md
crates/j2k-transcode-metal/: Cargo.toml  README.md
crates/j2k-transcode-test-support/: Cargo.toml
crates/j2k-types/: Cargo.toml  README.md
crates/signinum-cli/: Cargo.toml  README.md
crates/signinum-cuda-runtime/: Cargo.toml  README.md  build.rs
crates/signinum-j2k-cuda/: Cargo.toml  README.md
crates/signinum-j2k-metal/: Cargo.toml  README.md  build.rs
crates/signinum-j2k-types/: Cargo.toml  README.md
crates/signinum-jpeg-cuda/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: adoption_benchmark.rs  adoption_corpus.rs  adoption_curate.rs  adoption_disabled.rs  adoption_manifest.rs  adoption_materialize.rs  adoption_report.rs  benchmark_commands.rs  benchmark_registry.rs  clone_audit.rs  codegen_commands.rs  command_support.rs  coverage.rs  cuda.rs  gpu_validation.rs  main.rs  markdown.rs  metal.rs  panic_surface.rs  perf_guard.rs  process.rs  public_support.rs  publication_gate.rs  quality_commands.rs  release_commands.rs  release_status.rs  semver.rs  source_audit.rs  stable_api.rs  test_command.rs
xtask/tests/: command_orchestration.rs  repo_lint.rs
(+2978 files in other folders)
