[workspace]
resolver = "2"
members = [
    "crates/j2k",
    "crates/j2k-codec-math",
    "crates/j2k-core",
    "crates/j2k-compare",
    "crates/j2k-cuda",
    "crates/j2k-cuda-runtime",
    "crates/j2k-jpeg",
    "crates/j2k-jpeg-cuda",
    "crates/j2k-jpeg-metal",
    "crates/j2k-metal",
    "crates/j2k-metal-support",
    "crates/j2k-ml",
    "crates/j2k-native",
    "crates/j2k-profile",
    "crates/j2k-test-support",
    "crates/j2k-tilecodec",
    "crates/j2k-transcode",
    "crates/j2k-transcode-cuda",
    "crates/j2k-transcode-metal",
    "crates/j2k-transcode-test-support",
    "crates/j2k-types",
    "crates/j2k-cli",
    "xtask",
]
exclude = ["third_party/block-0.1.6-patched"]

[workspace.package]
version = "0.7.3"
edition      = "2021"
rust-version = "1.96"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/frames-sg/j2k"
homepage     = "https://github.com/frames-sg/j2k"
keywords     = ["jpeg", "jpeg2000", "htj2k", "gpu", "transcode"]
categories   = ["multimedia::images", "multimedia::encoding", "compression"]

[workspace.dependencies]
thiserror = { version = "2", default-features = false }
proptest  = { version = "1" }
criterion = { version = "0.8", default-features = false }
flate2 = { version = "1.1", default-features = false, features = ["zlib"] }
zstd = { version = "0.13" }
weezl = { version = "0.1.12" }
libloading = "0.9"
metal  = "0.33"
rayon  = "1"
cc     = "1.2"
libc   = "0.2"
log    = "0.4"
memchr = { version = "2.8", default-features = false }
image = { version = "0.25.8", default-features = false, features = ["bmp", "jpeg", "png", "pnm", "tiff"] }
jpeg-encoder = "0.7.0"
jpeg-decoder = { version = "0.3.2", default-features = false }
zune-core = "0.5.1"
zune-jpeg = "0.5.15"
fearless_simd = "0.4"
libm = { version = "0.2", default-features = false }
openjpeg-sys = "1.0.12"
proc-macro2 = "1.0.106"
serde_json = "1"
serde_yaml_ng = "0.10"
syn = "2.0.117"
toml = "1.1.2"
burn-core = { version = "0.21.0", default-features = false, features = ["dataset", "std"] }
burn-autodiff = { version = "0.21.0", default-features = false, features = ["std"] }
burn-flex = { version = "0.21.0", default-features = false, features = ["std"] }
burn-ndarray = { version = "0.21.0", default-features = false, features = ["std"] }
burn-wgpu = { version = "0.21.0", default-features = false, features = ["fusion", "metal", "std"] }
burn-cuda = { version = "0.21.0", default-features = false, features = ["fusion", "std"] }
burn-cubecl = { version = "0.21.0", default-features = false, features = ["fusion", "std"] }
burn-fusion = { version = "0.21.0", default-features = false, features = ["std"] }
burn-ir = { version = "0.21.0", default-features = false, features = ["std"] }

[patch.crates-io]
# `metal 0.33.0` still depends on `block 0.1.6`. The crates.io copy declares
# `_NSConcreteStackBlock` with an uninhabited opaque enum, which is a future
# Rust hard error. Keep this patch minimal and remove it when `metal` publishes
# a fixed dependency path.
block = { path = "third_party/block-0.1.6-patched" }

# Shared strict-lint policy for safe crates. Crates with genuinely different
# needs (SIMD/FFI crates that use `unsafe`, crates with documented temporary
# allow lists) keep their own [lints] tables until later cleanup phases
# narrow them.
[workspace.lints.rust]
unsafe_code            = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub        = "warn"

[workspace.lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = "symbols"
opt-level     = 3

[profile.release-bench]
inherits  = "release"
debug     = true
strip     = "none"
