[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["bmp", "jpeg", "png", "tiff"] }
j2k = { path = "../crates/j2k" }
j2k-compare = { path = "../crates/j2k-compare" }
j2k-native = { path = "../crates/j2k-native" }
j2k-profile = { path = "../crates/j2k-profile" }
j2k-test-support = { path = "../crates/j2k-test-support" }
serde_json = "1"
serde_yaml_ng = "0.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = "allow"
