[package]
name        = "j2k-cli"
description = "Command-line JPEG 2000 and HTJ2K inspection and transcode tool for j2k"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace = true
readme               = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[[bin]]
name = "j2k"
path = "src/main.rs"
doc = false

[dependencies]
j2k  = { path = "../j2k", version = "=0.7.0" }
j2k-jpeg = { path = "../j2k-jpeg", version = "=0.7.0" }
j2k-transcode = { path = "../j2k-transcode", version = "=0.7.0" }

[dev-dependencies]
j2k-test-support = { path = "../j2k-test-support" }

# NOTE: `[profile.*]` blocks in package-level manifests are silently ignored
# inside a workspace (see https://doc.rust-lang.org/cargo/reference/profiles.html#overrides).
# Any codegen tweaks for the CLI must go in the root workspace `Cargo.toml`.

[lints]
workspace = true
