[package]
name = "j2k-codec-math"
description = "No-std shared codec constants and pure math tables for j2k backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_codec_math"
path = "src/lib.rs"

[dependencies]

[lints]
workspace = true
