[package]
name = "j2k-codec-math"
description = "no_std codec constants, generated fragments, and allocation-free helper algorithms for j2k"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
links = "j2k_codec_math"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_codec_math"
path = "src/lib.rs"

[dependencies]

[lints]
workspace = true
