[package]
name = "j2k-compare"
description = "JPEG 2000 oracle comparison helpers for j2k"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.6.0" }
j2k-native = { path = "../j2k-native", version = "=0.6.0" }
j2k = { path = "../j2k", version = "=0.6.0" }
j2k-test-support = { path = "../j2k-test-support", version = "=0.6.0" }
image = { version = "0.25.8", default-features = false, features = ["bmp", "jpeg", "png", "pnm", "tiff"] }
openjpeg-sys = "1.0.12"

[build-dependencies]
cc = { workspace = true }

[[bin]]
name = "jp2k_batch_compare"
path = "src/bin/jp2k_batch_compare.rs"

[[bin]]
name = "jp2k_roi_batch_compare"
path = "src/bin/jp2k_roi_batch_compare.rs"

[[bin]]
name = "jp2k_fixture_compare"
path = "src/bin/jp2k_fixture_compare.rs"

[[bin]]
name = "jp2k_encode_compare"
path = "src/bin/jp2k_encode_compare.rs"

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
