[package]
name = "j2k-compare"
description = "JPEG 2000 oracle comparison helpers for j2k"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.cargo-machete]
# Used from build.rs when a local Grok C shim is compiled.
ignored = ["cc"]

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.7.2" }
j2k-native = { path = "../j2k-native", version = "=0.7.2" }
j2k = { path = "../j2k", version = "=0.7.2" }
j2k-test-support = { path = "../j2k-test-support", version = "=0.7.2" }
image = { workspace = true }
openjpeg-sys = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[[bin]]
name = "jp2k_batch_compare"
path = "src/bin/jp2k_batch_compare.rs"

[[bin]]
name = "jp2k_roi_batch_compare"
path = "src/bin/jp2k_roi_batch_compare.rs"

[[bin]]
name = "jp2k_fixture_compare"
path = "src/bin/jp2k_fixture_compare.rs"

[[bin]]
name = "jp2k_encode_compare"
path = "src/bin/jp2k_encode_compare.rs"

[lints.rust]
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
# Public API annotation/documentation policy remains a separate release review.
must_use_candidate = "allow"
missing_errors_doc = "allow"
