[package]
name = "j2k-cuda-runtime"
description = "CUDA codec engine and Driver API runtime for j2k device adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_cuda_runtime"
path = "src/lib.rs"

[features]
default = []
cuda-profiling = []
cuda-oxide-copy-u8 = []
cuda-oxide-j2k-encode = []
cuda-oxide-j2k-decode-store = []
cuda-oxide-j2k-dequantize = []
cuda-oxide-j2k-idwt = []

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.6.0" }
libloading = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
