[package]
name = "j2k-cuda-runtime"
description = "CUDA codec engine and Driver API runtime for j2k device adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
include = ["Cargo.toml", "README.md", "build.rs", "src/**"]

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_cuda_runtime"
path = "src/lib.rs"

[features]
default = []
cuda-profiling = []
cuda-oxide = [
    "cuda-oxide-copy-u8",
    "cuda-oxide-j2k-encode",
    "cuda-oxide-j2k-decode-store",
    "cuda-oxide-j2k-dequantize",
    "cuda-oxide-j2k-idwt",
    "cuda-oxide-htj2k-decode",
    "cuda-oxide-htj2k-encode",
    "cuda-oxide-transcode",
    "cuda-oxide-jpeg-decode",
    "cuda-oxide-jpeg-encode",
]
cuda-oxide-copy-u8 = []
cuda-oxide-j2k-encode = []
cuda-oxide-j2k-decode-store = []
cuda-oxide-j2k-dequantize = []
cuda-oxide-j2k-idwt = []
cuda-oxide-htj2k-decode = []
cuda-oxide-htj2k-encode = []
cuda-oxide-transcode = []
cuda-oxide-jpeg-decode = []
cuda-oxide-jpeg-encode = []

[dependencies]
j2k-codec-math = { path = "../j2k-codec-math", version = "=0.7.0" }
j2k-core = { path = "../j2k-core", version = "=0.7.0" }
libloading = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
j2k-test-support = { path = "../j2k-test-support" }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
# Public API annotation/documentation policy remains a separate release review.
must_use_candidate = "allow"
missing_errors_doc = "allow"
