[package]
name = "j2k-cuda"
description = "CUDA adapter for resident HTJ2K decode/encode and shared JPEG 2000 stages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_cuda"
path = "src/lib.rs"

[features]
default = []
cuda-runtime = [
    "dep:j2k-cuda-runtime",
    "j2k-cuda-runtime/cuda-oxide-copy-u8",
    "j2k-cuda-runtime/cuda-oxide-j2k-encode",
    "j2k-cuda-runtime/cuda-oxide-j2k-decode-store",
    "j2k-cuda-runtime/cuda-oxide-j2k-dequantize",
    "j2k-cuda-runtime/cuda-oxide-j2k-idwt",
    "j2k-cuda-runtime/cuda-oxide-htj2k-decode",
    "j2k-cuda-runtime/cuda-oxide-htj2k-encode",
]
cuda-profiling = ["cuda-runtime", "j2k-cuda-runtime/cuda-profiling"]

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.7.0" }
j2k-cuda-runtime = { path = "../j2k-cuda-runtime", version = "=0.7.0", optional = true }
j2k = { path = "../j2k", version = "=0.7.0" }
j2k-native = { path = "../j2k-native", version = "=0.7.0" }
j2k-profile = { path = "../j2k-profile", version = "=0.7.0" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
j2k-test-support = { path = "../j2k-test-support", features = ["j2k-native-fixtures"] }

[[bench]]
name = "encode_stages"
harness = false
test = false

[[bench]]
name = "htj2k_decode"
harness = false
test = false

[[bench]]
name = "htj2k_encode"
harness = false
test = false
required-features = ["cuda-runtime"]

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
