[package]
name = "j2k-jpeg-cuda"
description = "CUDA JPEG decode adapter for j2k-jpeg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_jpeg_cuda"
path = "src/lib.rs"

[features]
default = []
cuda-runtime = ["dep:j2k-cuda-runtime"]

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.6.0" }
j2k-cuda-runtime = { path = "../j2k-cuda-runtime", version = "=0.6.0", optional = true }
j2k-jpeg = { path = "../j2k-jpeg", version = "=0.6.0" }
j2k-profile = { path = "../j2k-profile", version = "=0.6.0" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
j2k-test-support = { path = "../j2k-test-support" }

[[bench]]
name = "device_decode"
harness = false

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
