[package]
name = "j2k-jpeg-metal"
description = "Metal JPEG decode and baseline encode adapter for j2k-jpeg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_jpeg_metal"
path = "src/lib.rs"

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.7.2" }
j2k-jpeg = { path = "../j2k-jpeg", version = "=0.7.2" }
j2k-metal-support = { path = "../j2k-metal-support", version = "=0.7.2" }
j2k-profile = { path = "../j2k-profile", version = "=0.7.2" }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
jpeg-encoder = { workspace = true }
jpeg-decoder = { workspace = true }
j2k-test-support = { path = "../j2k-test-support" }

[[bench]]
name = "device_upload"
harness = false
test = false

[[bench]]
name = "compare"
harness = false
test = false

[[bench]]
name = "encode_baseline"
harness = false
test = false

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
# Public API annotation/documentation policy remains a separate release review.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
