[package]
name        = "j2k-jpeg"
description = "JPEG inspect/decode and fallback encode support for j2k"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_jpeg"
path = "src/lib.rs"

[features]
scalar-only  = []   # retained for fuzz/reference decode until native SIMD backends land
# Opt-in for the comparison benches only: probes pkg-config for
# libturbojpeg and emits link directives. Off by default so library
# consumers never link a system JPEG.
bench-libjpeg-turbo = []
bench-internals = []

[dependencies]
j2k-codec-math = { path = "../j2k-codec-math", version = "=0.7.2" }
j2k-core = { path = "../j2k-core", version = "=0.7.2" }
j2k-profile = { path = "../j2k-profile", version = "=0.7.2" }
thiserror = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
j2k-test-support = { path = "../j2k-test-support" }
jpeg-decoder = { workspace = true }
zune-core = { workspace = true }
zune-jpeg = { workspace = true }

[[bench]]
name = "compare"
harness = false
test = false
required-features = ["bench-libjpeg-turbo"]

[[bench]]
name = "micro"
harness = false
test = false
required-features = ["bench-internals"]

[[bench]]
name = "fast420_breakdown"
harness = false
test = false
required-features = ["bench-libjpeg-turbo", "bench-internals"]

[[bench]]
name = "corpus_report"
harness = false
test = false

[[bench]]
name = "encode_cpu"
harness = false
test = false

[[test]]
name = "fast420_profile"
required-features = ["bench-internals"]

[[test]]
name = "idct_parity"
required-features = ["bench-internals"]

[[test]]
name = "neon_hot_paths"
required-features = ["bench-internals"]

[lints.rust]
# Audited unsafe is confined to SIMD/hot kernels in `src/backend/`,
# `src/idct/{avx2,neon}.rs`, and `src/entropy/sequential/deposit.rs`, plus
# benchmark-only SIMD shims, FFI, and allocator instrumentation. Keep every
# unsafe operation explicit and lint each unsafe block.
unsafe_code     = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
# `missing_docs` remains disabled for now because CI uses `-D warnings` and the
# public surface is still being documented crate-by-crate after the 1.0
# workspace integration.

[lints.clippy]
pedantic                     = { level = "warn", priority = -1 }
undocumented_unsafe_blocks  = "warn"
# JPEG equations, component planes, and matched scalar/SIMD kernels use the
# normative names `x`/`y`, `dc`/`ac`, and `cb`/`cr`. A forced audit found 155
# unique production sites; per-function attributes or asymmetric renames would
# obscure parity review. Revisit if this lint begins firing in non-codec policy
# or orchestration modules rather than representation-matched codec code.
similar_names                = "allow"
