[package]
name = "j2k-metal-support"
description = "Shared Metal runtime setup helpers for J2K adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_metal_support"
path = "src/lib.rs"

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.6.2" }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
