[package]
name = "j2k-metal"
description = "Metal decoder and encode-stage adapter for j2k"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[package.metadata.cargo-machete]
# Used from build.rs for the optional Metal signpost Objective-C bridge.
ignored = ["cc"]

[lib]
name = "j2k_metal"
path = "src/lib.rs"

[dependencies]
j2k-codec-math = { path = "../j2k-codec-math", version = "=0.7.4" }
j2k-core = { path = "../j2k-core", version = "=0.7.4" }
j2k = { path = "../j2k", version = "=0.7.4" }
j2k-native = { path = "../j2k-native", version = "=0.7.4" }
j2k-metal-support = { path = "../j2k-metal-support", version = "=0.7.4" }
j2k-profile = { path = "../j2k-profile", version = "=0.7.4" }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
metal = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
j2k-test-support = { path = "../j2k-test-support" }

[build-dependencies]
cc = { workspace = true }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
# Public API annotation/documentation policy is tracked separately from the
# implementation-quality lint gate to avoid fingerprint-only release churn.
must_use_candidate = "allow"
missing_errors_doc = "allow"
