[package]
name = "j2k-profile"
description = "Internal profiling helpers for j2k crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_profile"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[lints]
workspace = true
